Updated the benchmark results

--- a/benchmark/index.html
+++ b/benchmark/index.html
@@ -41,6 +41,8 @@ body {
 </head>
 <body>
 <h2>Web Array Math API benchmark</h2>
+<p>You can find some early benchmark results <a href="results.html">here</a>.</p>
+
 <p>Warning: "Run in main thread" is not recommended - it's just there to test
 that things work as expected both in workers and in the main thread.</p>
 <div>
