--- a/index.html
+++ b/index.html
@@ -224,11 +224,18 @@
         </li>
       </ul>
       <div class="note">
-        The rationale is that computational performance is important.
-        Conforming clients should be able to utilize any available optimization
-        techniques when implementing the API, including (but not limited to)
-        using hardware specific instructions and data types that do not fully
-        support IEEE 754.
+        <p>
+          The rationale is that computational performance is important.
+          Conforming clients should be able to utilize as many optimization
+          techniques as possible when implementing the API, including (but not
+          limited to) using hardware specific instructions and data types that
+          may or may not fully support IEEE 754.
+        </p>
+        <p>
+          As an example of reordering of operations, a conforming client may
+          choose to implement <code>sqrt(x)</code> as
+          <code>x * (1 / sqrt(x))</code>.
+        </p>
       </div>
     </section>
 
@@ -243,12 +250,9 @@
         </p>
       </div>
       <div class="note">
-        The rationale is that an implementation could allow overlapping
-        operations for all methods, but it would either require using temporary
-        arrays internally, adding a performance hit for some combinations of
-        arguments, or an implementation would have to carry double the
-        code (more or less) and dynamically switch between forward and backward
-        operations, for instance.
+        The rationale is that while an implementation could allow overlapping
+        operations for all methods, it would come at a performance and/or
+        complexity cost.
       </div>
     </section>
 
