--- a/demos/fft-synth.html
+++ b/demos/fft-synth.html
@@ -31,7 +31,7 @@ body {
 function Demo() {
 
   var PROFILE_SIZE = 256;
-  var FFT_SIZE = 131072 * 2;
+  var FFT_SIZE = 131072;
   var SAMPLE_RATE = 44100;
   var NOTE_FREQ = 220;
 
