Added reference to the ArrayMath library

--- a/benchmark/results.html
+++ b/benchmark/results.html
@@ -252,7 +252,9 @@ body {
 <h2>Web Array Math API benchmark results</h2>
 
 <p>These are some early benchmark results from an experimental (internal) Opera
-build with a native Web Array Math API implementation.</p>
+build with a native Web Array Math API implementation (based on the
+SIMD-optimized <a href="https://gitorious.org/arraymath">ArrayMath</a> C++
+library).</p>
 
 <p>For comparison, results from other browsers using the JavaScript polyfill
 are included.</p>
