Cleaned up the demo directory structure

--- a/demos/fftsynth/index.html
+++ b/demos/fftsynth/index.html
@@ -24,7 +24,7 @@ body {
   font-size: 8pt;
 }
 </style>
-<script type="text/javascript" src="../polyfill/webarraymath.js"></script>
+<script type="text/javascript" src="../../polyfill/webarraymath.js"></script>
 <script type="text/javascript">
 "use strict";
 
