--- a/demos/index.html
+++ b/demos/index.html
@@ -10,8 +10,8 @@ body {
 <body>
 <h2>Web Array Math API - Demos</h2>
 <ul>
-  <li><a href="mandel.html">Mandelbrot fractal</a></li>
-  <li><a href="fft-synth.html">FFT based sound synthesis</a></li>
+  <li><a href="mandel/">Mandelbrot fractal</a></li>
+  <li><a href="fftsynth/">FFT based sound synthesis</a></li>
 </ul>
 </body>
 </html>
