Added a nice particle demo (original: http://liveweave.com/TcZrXF)

--- a/demos/index.html
+++ b/demos/index.html
@@ -10,8 +10,9 @@ body {
 <body>
 <h2>Web Array Math API - Demos</h2>
 <ul>
-  <li><a href="mandel/">Mandelbrot fractal</a></li>
-  <li><a href="fftsynth/">FFT based sound synthesis</a></li>
+  <li><a href="mandel/">Mandelbrot fractal [Web Workers]</a></li>
+  <li><a href="fftsynth/">FFT based sound synthesis [Web Audio API]</a></li>
+  <li><a href="particles/">A particle system [WebGL]</a></li>
 </ul>
 </body>
 </html>
