--- a/demos/particles/index.html
+++ b/demos/particles/index.html
@@ -3,6 +3,7 @@
 		<title>FLUID - WebGL demo by boblemarin (https://github.com/boblemarin/FLU)</title> 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<link type="text/css" rel="stylesheet" href="style.css">
+		<script type="text/javascript" src="../../polyfill/webarraymath.js"></script>
 		
 		<script id="shader-fs" type="x-shader/x-fragment">
 				#ifdef GL_ES
@@ -17,13 +18,13 @@
 		</script>
 		
 		<script id="shader-vs" type="x-shader/x-vertex">
-  			attribute vec3 vertexPosition;
+			attribute vec2 vertexPosition;
 
 			uniform mat4 modelViewMatrix;
 			uniform mat4 perspectiveMatrix;
 
  			void main(void) {
-				gl_Position = perspectiveMatrix * modelViewMatrix * vec4(vertexPosition, 1.0);
+				gl_Position = perspectiveMatrix * modelViewMatrix * vec4(vertexPosition, 1.83, 1.0);
 			}	
 		</script>
 		
