Referenced boblemarin in the demos list

--- a/demos/index.html
+++ b/demos/index.html
@@ -12,7 +12,7 @@ body {
 <ul>
   <li><a href="mandel/">Mandelbrot fractal [Web Workers]</a></li>
   <li><a href="fftsynth/">FFT based sound synthesis [Web Audio API]</a></li>
-  <li><a href="particles/">A particle system [WebGL]</a></li>
+  <li><a href="particles/">A particle system (original by boblemarin) [WebGL]</a></li>
 </ul>
 </body>
 </html>
