--- a/demos/particles/index.html
+++ b/demos/particles/index.html
@@ -2,6 +2,7 @@
 	<head> 
 		<title>FLUID - WebGL demo by boblemarin (https://github.com/boblemarin/FLU)</title> 
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi">
 		<link type="text/css" rel="stylesheet" href="style.css">
 		<script type="text/javascript" src="../../polyfill/webarraymath.js"></script>
 		
