--- a/demos/particles/index.html
+++ b/demos/particles/index.html
@@ -21,11 +21,10 @@
 		<script id="shader-vs" type="x-shader/x-vertex">
 			attribute vec2 vertexPosition;
 
-			uniform mat4 modelViewMatrix;
 			uniform mat4 perspectiveMatrix;
 
  			void main(void) {
-				gl_Position = perspectiveMatrix * modelViewMatrix * vec4(vertexPosition, 1.83, 1.0);
+				gl_Position = perspectiveMatrix * vec4(vertexPosition, 1.83, 1.0);
 			}	
 		</script>
 		
