--- a/demos/particles/index.html
+++ b/demos/particles/index.html
@@ -31,7 +31,7 @@
 	</head>
 	<body>
 		<canvas id="webGLCanvas"></canvas>
-		<div id="instructions">Click and drag to animate particles, press any key to switch between rendering modes</div>
+		<div id="instructions">Click and drag to animate particles (multi touch works too!)</div>
 
 		<script type="text/javascript" src="particles.js"></script>
 	</body>
